# FINAL-email-crawler-streamlit-final

./: .cursorrules  .env.example  .gitignore  .gitmodules  .replit  @RELEASE_active.py  CLOUDFLARED.sh  LICENSE  MANIFEST.in  MAP_REPO.txt  README.md  REFERENCE-taskloop-phase2-details-and-exit-conditons.md  RELEASE_streamlit_app copy 2.py  RELEASE_streamlit_app copy.py  RELEASE_streamlit_app.py  RELEASE_streamlit_app.py.bak2  RELEASE_streamlit_app5.py  RELEASE_streamlit_app_test.py  RELEASE_streamlit_app_to_niceguy.py  _temp_check.py  add_email_settings.py  ai_debug_agent.py  app copy.py  app-fastapi.py  app-works-simple.py  app.py  autogen-debug.py  automate_ui.py  automated_search.py  background_worker.py  backup.dump  browser_search.py  celery_config.py  check_email_settings.py  check_settings.py  code_outline.txt  code_structure.txt  concise_schema.txt  config.py  create_search_term.py  (+92 more)
.history/: promptformigrate_20241202141848.md  promptformigrate_20241202161139.md  requirements_20241130153704.txt  search_results_20241202140429.py  search_strategy_tool_20241202140308.py  streamlit_app_20241130133926.py  streamlit_app_20241130133942.py  streamlit_app_20241130134058.py  streamlit_app_20241130134305.py  streamlit_app_20241130134407.py  streamlit_app_20241130134632.py  streamlit_app_20241130140302.py  streamlit_app_20241130141106.py  streamlit_app_20241130141258.py  streamlit_app_20241130141551.py  streamlit_app_20241130142330.py  streamlit_app_20241130143156.py  streamlit_app_20241130150042.py  streamlit_app_20241130151131.py  streamlit_app_20241130151155.py  streamlit_app_20241130181541.py  streamlit_app_20241130185537.py  streamlit_app_20241130191023.py  streamlit_app_20241130191507.py  streamlit_app_20241130193153.py  streamlit_app_20241130193308.py  streamlit_app_ENSENADOAJOSE_20241130145433.py  test_file_to_delete_20241202150159.txt
.streamlit/: config.toml
IGNORE-OLD-VERSIONS/: .zshrc  (+3 more)
(+410 files in other folders)
