[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.11",
    "beautifulsoup4>=4.12.3",
    "boto3>=1.35.98",
    "fake-useragent>=2.0.3",
    "openai>=1.59.7",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.37",
    "streamlit-tags>=1.2.8",
    "streamlit>=1.41.1",
    "streamlit-option-menu>=0.4.0",
    "tenacity>=9.0.0",
    "google>=3.0.0",
    "email-validator>=2.2.0",
    "plotly>=5.24.1",
]
